# ncnn_Android_BlazePose

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: detection.param  full.param  heavy.param  lite.param
app/src/main/java/com/tencent/blazeposencnn/: BlazePoseNcnn.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  blazepose.cpp  blazepose.h  blazeposencnn.cpp  landmark.cpp  landmark.h
app/src/main/jni/filter/: landmark_smoothing_filter.cpp  landmark_smoothing_filter.h  low_pass_filter.cpp  low_pass_filter.h  one_euro_filter.cpp  one_euro_filter.h  relative_velocity_filter.cpp  relative_velocity_filter.h  time_stamp.cpp  time_stamp.h
app/src/main/res/values/: strings.xml
